<resources>
    <string name="app_name">OrderMeAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab_bar">TabBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_orders">Orders</string>
    <string name="header_restaurant">Restaurant</string>
    <string name="header_date">Date</string>
    <string name="time_header">Time</string>
    <string name="check_header">Check</string>
    <string name="facebook_app_id">947267746898179</string>
    <string name="facebook_client_token">3492be5f3865184e1102e0b76689eb96</string>
    <string name="fb_login_protocol_scheme">fb947267746898179</string>
    <string name="connection_error">"An error has occurred. Please check Internet connection"</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="history_reservations">History of reservations</string>
    <string name="future_reservations">Future reservations</string>
    <string name="reason_dialog_tittle">How waiter can help you?</string>
    <string name="dish_description">Description</string>
    <string name="order_accepted_tittle">Your order is accepted!</string>
    <string name="order_accepted_message">Thank you for making the order! It will be ready soon.</string>
    <string name="error">Error</string>
    <string name="logout">Are you sure to logout?</string>
    <string name="delete_all">Delete All</string>
    <string name="accept">Accept</string>
    <string name="total_79">Total: $79</string>
    <string name="your_comment">Your comment…</string>
    <string name="book">Book</string>
    <string name="phone_number">Phone number</string>
    <string name="number_of_people">Number of people</string>
    <string name="pick_date">Pick date</string>
    <string name="not_logged">You are not logged in!</string>
    <string name="login_later">Login Later</string>
    <string name="continue_logged_in">Continue</string>
    <string name="success">Success!</string>
    <string name="reservation_success">Your reservation was made</string>
    <string name="should_login_reservation">Only authorizated people can make reservations</string>
    <string name="login">Login</string>
    <string name="should_login_order">Only authorizated people can make orders</string>
    <string name="waiter_response">Waiter is on his way</string>
    <string name="detect_table">Detect table</string>
    <string name="menu">Menu</string>
    <string name="reservation">Reservation</string>
    <string name="call_a_waiter">Call a waiter</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="qr_scanner">Scan table QR code</string>
    <string name="bucket_sum">Total sum for the selected dishes</string>
    <string name="bucket_button">Checkout</string>
    <string name="logout_button">Logout</string>
</resources>
