<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/make_reservation_image_view"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_arrow_white_24dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/make_reservation_phone_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                    android:id="@+id/make_reservation_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone_number"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textSize="14sp" android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/make_reservation_people_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                    android:id="@+id/make_reservation_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_number_of_people"
                    android:hint="@string/number_of_people"
                    android:inputType="number"
                    android:textSize="14sp" android:imeOptions="actionNext"
                    android:nextFocusForward="@id/make_reservation_date_picker"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/make_reservation_people_layout"
            android:text="@string/pick_date"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/pickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <DatePicker
                android:id="@+id/make_reservation_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-25dp"
                android:layout_marginEnd="-42dp"
                android:layout_marginStart="-35dp"
                android:layout_marginTop="-25dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:scaleX="0.75"
                android:scaleY="0.75" android:nextFocusForward="@id/make_reservation_time_picker"/>

        <TimePicker
            android:id="@+id/make_reservation_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-25dp"
            android:layout_marginEnd="-42dp"
            android:layout_marginStart="-35dp"
            android:layout_marginTop="-25dp"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <Button
        android:id="@+id/make_reservation_book_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/accept_button"
        android:text="@string/book"
        android:textAllCaps="false"
        android:textColor="@color/qr_code_white" />

</LinearLayout>